--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#whoami
+ring = "0.16.20"
+whoami = "1.2.1"
